# runtime

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
firmware/esp32/: README.md  platformio.ini
firmware/esp32/include/: config.h.example  contract.h
firmware/esp32/src/: main.cpp
scripts/: gen_from_contract.py  install-renpy-sdk.sh
src/frame_processor/: __init__.py  __main__.py  capture.py  constants.py  dispatch.py  dither.py  eink_receiver.py  processor.py
src/input/: __init__.py  __main__.py  gpio_reader.py  handler.py  keymap.py  net_handler.py  net_sender.py
src/spi_driver/: __init__.py  build.py  contract.h  spi_driver.c  spi_driver.h
systemd/: inky-frame-processor.service  inky-input-handler.service
tests/integration/: test_eink_receiver.py  test_socket_dispatch.py  test_tcp_dispatch.py
tests/unit/: test_contract_parity.py  test_dither.py  test_input.py  test_net_input.py  test_net_sender.py
