[build-system]
# cffi is intentionally NOT a build requirement: this wheel is pure-Python (the
# _spi_driver C extension is compiled separately via `python -m spi_driver.build`,
# not by this backend). Listing cffi here makes `python -m build --no-isolation`
# demand it at wheel-build time, which breaks non-SPI targets (e.g. the emulator)
# whose Buildroot env has no host-python-cffi. cffi is pulled in only where it is
# actually used: the SPI extension build + runtime (buildroot_os inky-runtime SPI
# branch), and the dev venv (see the `make build-c` fallback).
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "einky-runtime"
version = "0.1.0"
description = "User-space runtime for the Einky e-paper handheld: frame pipeline, input handling, SPI driver."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.2",
    "numpy>=1.26",
    "gpiozero>=2.0",
    "cffi>=1.16",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-Pillow",
]

[project.scripts]
inky-frame = "frame_processor.__main__:main"
inky-input = "input.__main__:main"
inky-eink-receiver = "frame_processor.eink_receiver:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the C driver sources + CFFI builder so a consumer (buildroot_os) can compile
# the _spi_driver extension on-target via `python -m spi_driver.build`.
[tool.setuptools.package-data]
spi_driver = ["*.c", "*.h"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
    "N",            # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["gpiozero.*", "cffi.*", "_spi_driver.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "hw: tests that require real hardware (skipped in CI)",
]
